# bangarang

./: .reviewboardrc  CMakeLists.txt  HACKING  Messages.sh  README  TESTING  actionsmanager.cpp  actionsmanager.h  bangarang.desktop  doxyfile  infomanager.cpp  infomanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediaitemdelegate.cpp  mediaitemdelegate.h  mediaview.cpp  mediaview.h  nowplayingdelegate.cpp  nowplayingdelegate.h  savedlistsmanager.cpp  savedlistsmanager.h  sensiblewidgets.cpp  sensiblewidgets.h  videosettings.cpp  videosettings.h
data/: bangarang.desktop  bangarang.notifyrc  bangarang_play_cd.desktop  bangarang_play_dvd.desktop
icons/: CMakeLists.txt
legacy/: README  TESTING  doxyfile
platform/: audioclipslistengine.cpp  audioclipslistengine.h  audiostreamlistengine.cpp  audiostreamlistengine.h  blur.cpp  cachelistengine.h  cdlistengine.cpp  cdlistengine.h  dvdlistengine.cpp  dvdlistengine.h  filelistengine.cpp  filelistengine.h  listengine.cpp  listengine.h  listenginefactory.cpp  listenginefactory.h  mediaindexer.cpp  mediaindexer.h  mediaitemmodel.cpp  mediaitemmodel.h  medialistcache.cpp  medialistsengine.cpp  playlist.cpp  (+16 more)
po/: CMakeLists.txt  bangarang.pot  merge.sh
po/cs/: CMakeLists.txt  bangarang.po
po/da/: bangarang.po
po/de/: bangarang.po
po/el/: bangarang.po
po/es/: bangarang.po
po/fi/: bangarang.po
po/fr/: bangarang.po
po/hu/: bangarang.po
po/it/: bangarang.po
po/lt/: bangarang.po
po/nl/: bangarang.po
po/pl/: bangarang.po
po/pt/: bangarang.po
po/pt_BR/: bangarang.po
po/ru/: bangarang.po
po/uk/: bangarang.po
po/zh_CN/: bangarang.po
src/: CMakeLists.txt  Messages.sh  actionsmanager.cpp  actionsmanager.h  audiolistsstack.cpp  audiolistsstack.h  audiosettings.cpp  audiosettings.h  bangarangapplication.cpp  bangarangapplication.h  bangarangnotifieritem.cpp  bangarangnotifieritem.h  bookmarksmanager.cpp  bookmarksmanager.h  config-bangarang.h.cmake  dbusobjects.cpp  dbusobjects.h  infoartistdelegate.cpp  infoartistdelegate.h  infobox.cpp  infobox.h  infocategorydelegate.cpp  infocategorydelegate.h  infoitemdelegate.cpp  infoitemdelegate.h  infoitemview.cpp  infoitemview.h  infomanager.cpp  infomanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediaitemdelegate.cpp  mediaitemdelegate.h  medialistsettings.cpp  medialistsettings.h  medialistsmanager.cpp  medialistsmanager.h  mediaview.cpp  (+22 more)
src/app/: main.cpp  resources.qrc
src/app/common/: actionsmanager.cpp  actionsmanager.h  artworkpainter.cpp  artworkpainter.h  bangarangapplication.cpp  bangarangapplication.h  bangarangnotifieritem.h  dbusobjects.cpp  dbusobjects.h  flickcharm.cpp  iconimageprovider.cpp  iconimageprovider.h  loadinganimation.cpp  loadinganimation.h  mainwindow.cpp  mainwindow.h  mediaitemdelegate.cpp  mediaitemdelegate.h  mediaview.cpp  mediaview.h  ratingdelegate.cpp  ratingdelegate.h  sensiblewidgets.cpp  sensiblewidgets.h  starrating.cpp  starrating.h  timercounter.cpp  timercounter.h
src/app/medialists/: audiolistsstack.cpp  audiolistsstack.h  infobox.cpp  infobox.h  infoitemdelegate.cpp  infoitemdelegate.h  infoitemview.cpp  infoitemview.h  infomanager.cpp  infomanager.h  medialistsettings.cpp  medialistsettings.h  medialistsmanager.cpp  medialistsmanager.h  savedlistsmanager.cpp  savedlistsmanager.h  videolistsstack.cpp  videolistsstack.h
src/app/nowplaying/: audiosettings.cpp  audiosettings.h  bangarangvideowidget.cpp  bangarangvideowidget.h  bookmarksmanager.cpp  bookmarksmanager.h  nowplayingdelegate.cpp  nowplayingdelegate.h  nowplayingmanager.cpp  nowplayingmanager.h  nowplayingview.cpp  nowplayingview.h  playlistview.cpp  playlistview.h  videosettings.cpp  videosettings.h
src/app/ui/: audiolistsstack.ui  mainwindow.ui  nowPlaying.qml  videolistsstack.ui
src/app/ui/convenience/: README
src/platform/: audioclipslistengine.cpp  audioclipslistengine.h  audiostreamlistengine.cpp  audiostreamlistengine.h  bangarangvideowidget.cpp  bangarangvideowidget.h  cachelistengine.cpp  cachelistengine.h  cdlistengine.cpp  cdlistengine.h  dbpediainfofetcher.cpp  dbpediainfofetcher.h  dbpediaquery.cpp  dbpediaquery.h  devicemanager.cpp  downloader.cpp  downloader.h  dvdcontroller.cpp  dvdcontroller.h  dvdlistengine.cpp  dvdlistengine.h  feedlistengine.cpp  feedlistengine.h  filelistengine.cpp  filelistengine.h  imdbqueryengine.cpp  infoartistmodel.cpp  infoartistmodel.h  infocategorymodel.cpp  infocategorymodel.h  infofetcher.cpp  infofetcher.h  infoitemmodel.cpp  infoitemmodel.h  listengine.cpp  listengine.h  listenginefactory.cpp  listenginefactory.h  mediaindexer.cpp  mediaindexer.h  (+34 more)
src/platform/infofetchers/: dbpediainfofetcher.cpp  dbpediainfofetcher.h  doubaninfofetcher.cpp  doubaninfofetcher.h  feedinfofetcher.cpp  feedinfofetcher.h  filenameinfofetcher.cpp  filenameinfofetcher.h  infofetcher.cpp  infofetcher.h  lastfminfofetcher.cpp  lastfminfofetcher.h  tmdbinfofetcher.cpp  tmdbinfofetcher.h  tvdbinfofetcher.cpp  tvdbinfofetcher.h
src/platform/listengines/: ampachelistengine.cpp  ampachelistengine.h  audioclipslistengine.cpp  audioclipslistengine.h  audiostreamlistengine.cpp  audiostreamlistengine.h  cachelistengine.cpp  cachelistengine.h  cdlistengine.cpp  cdlistengine.h  dvdlistengine.cpp  dvdlistengine.h  feedlistengine.cpp  feedlistengine.h  filelistengine.cpp  filelistengine.h  listengine.cpp  listengine.h  listenginefactory.cpp  listenginefactory.h  medialistsengine.cpp  medialistsengine.h  musiclistengine.cpp  musiclistengine.h  nepomuklistengine.cpp  nepomuklistengine.h  savedlistsengine.cpp  savedlistsengine.h  semanticslistengine.cpp  semanticslistengine.h  taglistengine.cpp  taglistengine.h  videolistengine.cpp  videolistengine.h
src/platform/nepomukwriter/: CMakeLists.txt  main.cpp  nepomukwriter.cpp  nepomukwriter.h
src/platform/utilities/: artwork.cpp  artwork.h  filetags.cpp  filetags.h  general.cpp  general.h  mediaitems.cpp  mediaitems.h  thread.cpp  thread.h  typechecks.cpp  typechecks.h  utilities.cpp  utilities.h
src/ui/: audiolistsstack.ui  mainwindow.ui  videolistsstack.ui
(+165 files in other folders)
